objects/vlocity_ins__PolicyPartyRelationship__c.object
<CustomObject>
    <description>DEPRECATED. Replaced by Held Product Relationship (AssetPartyRelationship__c). Relationships to parties with a role on a policy. For example, policyholder, beneficiary or producer.</description>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <description>Formula: the account id for a party of type account.</description>
        <formula>CASESAFEID(vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BeneficiaryPercentage__c</fullName>
        <description>For beneficiary relationships, the percentage of the total value to be paid to this beneficiary.</description>
        <label>Beneficiary Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CommissionPercentage__c</fullName>
        <description>For producer relationships, the percentage of the commission that will be paid to this producer.</description>
        <label>Commission Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContactId__c</fullName>
        <description>Formula: the contact id for a party of type contact.</description>
        <formula>CASESAFEID(vlocity_ins__PartyId__r.vlocity_ins__ContactId__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyId__c</fullName>
        <description>The Id of the related party.</description>
        <label>Party</label>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipLabel>Policy Relationships</relationshipLabel>
        <relationshipName>PoliciesClientsRel1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyRelationshipType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The relationship type, or role, for this relationship.</description>
        <label>Relationship Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_ins__PartyRelationshipType__c.vlocity_ins__SourcePartyType__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__PartyRelationshipType__c</referenceTo>
        <relationshipLabel>Policy Relationships</relationshipLabel>
        <relationshipName>PolicyRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Party__c</fullName>
        <description>Formula: a hyperlink to the detail page for the related party based on the type of party.</description>
        <formula>IF( ISBLANK(vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.Id), HYPERLINK(&quot;/&quot; &amp; vlocity_ins__PartyId__r.vlocity_ins__ContactId__r.Id, vlocity_ins__PartyId__r.Name  , &quot;_parent&quot;), HYPERLINK(&quot;/&quot; &amp; vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.Id, vlocity_ins__PartyId__r.Name , &quot;_parent&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Percentage__c</fullName>
        <description>A percentage for this relationship. However, use Beneficiary Percentage on beneficiary relationships and Commission Percentage on producer relationships.</description>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyHolderId__c</fullName>
        <formula>CASESAFEID(vlocity_ins__PolicyId__r.vlocity_ins__AccountId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Holder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyId__c</fullName>
        <description>The parent policy.</description>
        <label>Policy</label>
        <referenceTo>vlocity_ins__Policy__c</referenceTo>
        <relationshipLabel>Policy Relationships</relationshipLabel>
        <relationshipName>PoliciesClientsRel1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyNumber__c</fullName>
        <formula>vlocity_ins__PolicyId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyType__c</fullName>
        <formula>Text(vlocity_ins__PolicyId__r.vlocity_ins__PolicyType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelatedParty__c</fullName>
        <formula>vlocity_ins__PartyId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelationshipToInsured__c</fullName>
        <description>Text description of the relationship of this party to the insured such as spouse or child.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship to Insured</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Role__c</fullName>
        <formula>vlocity_ins__PartyRelationshipType__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <label>Policy Relationship</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>